<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="@drawable/fondo"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            style="@style/titulo"
            android:text="@string/app_name" />

        <Button
            android:id="@+id/un_jug"
            style="@style/boton"
            android:text="@string/un_jugador" />

        <RadioGroup
            android:id="@+id/configGrupo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/facil"
                style="@style/botones_radio"
                android:text="@string/facil"></RadioButton>

            <RadioButton
                android:id="@+id/normal"
                style="@style/botones_radio"
                android:checked="true"
                android:text="@string/normal"></RadioButton>


            <RadioButton
                android:id="@+id/imposible"
                style="@style/botones_radio"
                android:text="@string/imposible"></RadioButton>
        </RadioGroup>

        <Button
            android:id="@+id/dos_jug"
            style="@style/boton"
            android:text="@string/dos_jugadores"></Button>

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:columnCount="3"
            android:rowCount="3">

            <ImageView
                android:id="@+id/a1"
                style="@style/casillas"
                android:src="@drawable/equis"></ImageView>

            <ImageView
                android:id="@+id/a2"
                style="@style/casillas"></ImageView>

            <ImageView
                android:id="@+id/a3"
                style="@style/casillas"
                android:src="@drawable/equis"></ImageView>

            <ImageView
                android:id="@+id/b1"
                style="@style/casillas"></ImageView>

            <ImageView
                android:id="@+id/b2"
                style="@style/casillas"
                android:src="@drawable/equis"></ImageView>

            <ImageView
                android:id="@+id/b3"
                style="@style/casillas"></ImageView>

            <ImageView
                android:id="@+id/c1"
                style="@style/casillas"
                android:src="@drawable/circulo"></ImageView>

            <ImageView
                android:id="@+id/c2"
                style="@style/casillas"
                android:src="@drawable/circulo"></ImageView>

            <ImageView
                android:id="@+id/c3"
                style="@style/casillas"
                android:src="@drawable/circulo"></ImageView>


        </GridLayout>

    </LinearLayout>

</LinearLayout>